# Remind-PyPSA-coupling

./: .gitignore  404.html  README.md  autogen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: deploy_docu.yml  gh-pages.yml  release.yml
data/: eg_remind.yaml  techmapping_remind2py.csv
docs/: autogen_ref_pages.py  index.md  objects.md  reference_nav.yml  transformations.md  tutorials.md
docs/reference/capacities_etl/: index.html
docs/reference/coupled_cfg/: index.html
docs/reference/disagg/: index.html
docs/reference/etl/: index.html
docs/reference/loads_etl/: index.html
docs/reference/pypsa_copies/: index.html
docs/reference/remind2pypsa_etl/: index.html
docs/reference/technoecon_etl/: index.html
docs/reference/utils/: index.html
examples/: basic_script.py  custom_transformations.py  multistep.py  one-offscript.py  read_and_transform_remind.py
objects/: index.html
search/: search_index.json
src/: dev.ipynb
src/REMIND-PyPSA-coupling/: capacities_etl.py  coupled_cfg.py  disagg.py  loads_etl.py  pypsa_copies.py  remind2pypsa_etl.py  utils.py
src/rcp/: capacities_etl.py
src/rpycpl/: __init__.py  capacities_etl.py  disagg.py  etl.py  loads_etl.py  technoecon_etl.py  utils.py
tests/: conftest.py  test_integration.py  test_utils.py
transformations/: index.html
tutorials/: index.html
