[project]
name = "REMIND-PyPSA-coupling"
version = "0.0.0a"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# These may need to match the GAMS python version
dependencies = ["numpy==2.2", "pandas>=2"]
[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv]
managed = true
[tool.uv.workspace]
members = ["REMIND-PyPSA-coupling", "src/remind_pypsa_coupling"]
