[project]
name = "REMIND-PyPSA-coupling"
version = "0.0.0a"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# These may need to match the GAMS python version
dependencies = ["numpy==2.2", "pandas>=2", "pyyaml", "country_converter"]
[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
jupyter = ["ipykernel","ipython"]

[project.urls]
Homepage = "https://github.com/pik-piam/Remind-PyPSA-coupling/"
Documentation = "https://pik-piam.github.io/Remind-PyPSA-coupling/"

[tool.uv]
managed = true
[tool.uv.workspace]
members = ["REMIND-PyPSA-coupling", "src/remind_pypsa_coupling"]

