[project]
name = "REMIND-PyPSA-coupling"
version = "0.0.0a"
description = "Tools to couple the REMIND IAM and PyPSA power models"
readme = "README.md"
requires-python = ">=3.12"

dependencies = ["numpy>=2", "pandas>=2", "pyyaml", "country_converter"]
[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
jupyter = ["ipykernel","ipython"]


[project.urls]
Homepage = "https://github.com/pik-piam/Remind-PyPSA-coupling/"
Documentation = "https://pik-piam.github.io/Remind-PyPSA-coupling/"

# uv
[tool.uv]
managed = true

[tool.uv.workspace]
members = ["REMIND-PyPSA-coupling", "src/remind_pypsa_coupling"]

[[tool.uv.index]]
name = "test-remind-coupl"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

